@@ -13,3 +13,5 @@
 13|
 14|POLYGON((0 0,10 0,10 10,0 0))
 15|POLYGON((0 0,10 0,10.5 10.5,0 10,0 0))|BOX(0 0,10.5 10.5)
+16|TRIANGLE((0 0,0 9,9 0,0 0))
+17|
